logs/mobility/build.make.011.log
[  0%] [  0%] [  0%] Built target roscpp_generate_messages_py
Built target tf2_msgs_generate_messages_lisp
Built target roscpp_generate_messages_lisp
[  0%] [  0%] Built target sensor_msgs_generate_messages_cpp
Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] [  0%] Built target geometry_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target tf_generate_messages_cpp
[  0%] [  0%] Built target std_msgs_generate_messages_py
Built target actionlib_generate_messages_cpp
[  0%] [  0%] Built target actionlib_msgs_generate_messages_cpp
Built target actionlib_generate_messages_lisp
[  0%] Built target actionlib_generate_messages_py
[  0%] [  0%] [  0%] Built target actionlib_msgs_generate_messages_py
Built target tf2_msgs_generate_messages_py
Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] [  0%] [  0%] [  0%] Built target rosgraph_msgs_generate_messages_py
Built target rosgraph_msgs_generate_messages_cpp
Built target std_msgs_generate_messages_cpp
Built target tf_generate_messages_lisp
[  0%] [  0%] [  0%] Built target std_msgs_generate_messages_lisp
Built target tf_generate_messages_py
Built target sensor_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target mobility
[0m[ 25%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/PickUpController.cpp.o
[0m[ 50%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/DropOffController.cpp.o
[0m[ 75%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/SearchController.cpp.o
[0m[100%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/mobility.cpp.o
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void initializeStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:309:27: error: expected ‘;’ before ‘:’ token
 print("done initializing"):
                           ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
